perf: Optimize gallery images with responsive srcset
- Create properly sized gallery images (600px desktop, 400px mobile)
- Add srcset and sizes attributes for responsive image loading
- Reduce gallery image payload from ~1MB to ~200KB
- Add explicit width/height to prevent layout shifts
- Bump version to 1.0.5

--- a/index.html
+++ b/index.html
@@ -83,19 +83,35 @@
                 </div>
                 <div class="about-gallery">
                     <div class="gallery-item">
-                        <img src="images/storefront.webp" alt="Original South City Computer storefront in St. Louis">
+                        <img src="images/storefront-gallery.webp"
+                             srcset="images/storefront-gallery-sm.webp 400w, images/storefront-gallery.webp 600w"
+                             sizes="(max-width: 768px) 400px, 600px"
+                             alt="Original South City Computer storefront in St. Louis"
+                             width="600" height="387" loading="lazy">
                         <span class="gallery-caption" data-i18n="about.cap1">The original St. Louis storefront</span>
                     </div>
                     <div class="gallery-item">
-                        <img src="images/store-interior.webp" alt="Store interior with signature blue lighting">
+                        <img src="images/store-interior-gallery.webp"
+                             srcset="images/store-interior-gallery-sm.webp 400w, images/store-interior-gallery.webp 600w"
+                             sizes="(max-width: 768px) 400px, 600px"
+                             alt="Store interior with signature blue lighting"
+                             width="600" height="399" loading="lazy">
                         <span class="gallery-caption" data-i18n="about.cap2">Our signature style</span>
                     </div>
                     <div class="gallery-item">
-                        <img src="images/repair-work.webp" alt="Hands-on computer repair work">
+                        <img src="images/repair-work-gallery.webp"
+                             srcset="images/repair-work-gallery-sm.webp 400w, images/repair-work-gallery.webp 600w"
+                             sizes="(max-width: 768px) 400px, 600px"
+                             alt="Hands-on computer repair work"
+                             width="600" height="399" loading="lazy">
                         <span class="gallery-caption" data-i18n="about.cap3">Always hands-on</span>
                     </div>
                     <div class="gallery-item">
-                        <img src="images/wall-mural.webp" alt="Graffiti art mural on building">
+                        <img src="images/wall-mural-gallery.webp"
+                             srcset="images/wall-mural-gallery-sm.webp 400w, images/wall-mural-gallery.webp 600w"
+                             sizes="(max-width: 768px) 400px, 600px"
+                             alt="Graffiti art mural on building"
+                             width="600" height="399" loading="lazy">
                         <span class="gallery-caption" data-i18n="about.cap4">Local art and culture</span>
                     </div>
                 </div>
